--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,24 @@
     margin-top: 220px;
 }
 .figure {
-    width: 200px;
 	height: 200px;
-    background-color: rgb(0, 0, 0);
     display: inline-block;
 }
 .figure1-square {
     width: 200px;
 	height: 200px;
-    background-color: rgb(0, 0, 0);
-    z-index: 1;
+    display: inline-block;
 }
 .figure2-rectangle {
     width: 400px;
 	height: 200px;
-    background-color: rgb(0, 0, 0);
+    display: inline-block;
 }
 .figure3-circle {
     width: 200px;
 	height: 200px;
     border-radius: 100px;
-    background-color: rgb(0, 0, 0);
+    display: inline-block;
 }
 .content {
     margin-top: 20px;
